made the scrollbar hidden and solved the vertical scrolling bug

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,4 @@
 * {
-  overflow: auto;
   margin: 0;
   padding: 0;
-}
-.main-area {
-  margin-top: 4rem;
 }
